--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -125,59 +123,46 @@
     <img src="voiture.png" alt="Voiture VTC" class="car-image" />
     <div class="info">
       <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
-      <p>OuassVTC vous propose un service de transport privé à Perpignan et ses environs. Nos chauffeurs professionnels, expérimentés et discrets sont à votre disposition 7j/7 pour assurer tous vos déplacements dans les meilleures conditions de ponctualité, de sécurité et de confort.</p>
-      <p>Que ce soit pour un trajet personnel, professionnel, ou pour vos transferts vers la gare ou l’aéroport, nous mettons un point d’honneur à vous offrir une prestation fiable, rapide et de qualité.</p>
-      <p>Réservez votre course en quelques clics via notre plateforme en ligne et bénéficiez d’une estimation tarifaire transparente, sans frais cachés ni mauvaises surprises.</p>
+      <p>OuassVTC vous propose un service de transport privé à Perpignan et ses environs...</p>
     </div>
 
-    <div class="info">
-      <div style="max-width: 400px; margin: 40px auto; font-weight: bold; font-size: 18px;">
-        <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">O</span><span>rganiser vos trajets</span></div>
-        <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">U</span><span>tile pour tous vos déplacements</span></div>
-        <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">A</span><span>gile et ponctuel</span></div>
-        <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span><span>écurité garantie</span></div>
-        <div style="display: flex; align-items: baseline;"><span style="color:#007bff; font-size: 24px; min-width: 30px;">S</span><span>ervice de qualité</span></div>
-      </div>
-
-      <div class="buttons">
-        <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
-        <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
-        <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
-        <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-        <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
-      </div>
-
-      <div class="info">
-        <h2>Formulaire de réservation</h2>
-        <p>Tarif fixe à l'avance – pas de surprise !</p>
-      </div>
-
-      <form>
-        <input type="text" placeholder="Nom" required />
-        <input type="tel" placeholder="Téléphone" required />
-        <div class="field-container-horizontal">
-          <input type="text" id="depart" placeholder="Adresse de départ" required />
-          <button type="button" class="localiser-side-btn">Me localiser</button>
-        </div>
-        <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required />
-        <select required>
-          <option value="" disabled selected>Nombre de passagers</option>
-          <option value="1">1 passager</option>
-          <option value="2">2 passagers</option>
-          <option value="3">3 passagers</option>
-          <option value="4">4 passagers</option>
-        </select>
-        <input type="datetime-local" required />
-        <textarea placeholder="Informations complémentaires"></textarea>
-        <button type="button" style="background-color:#28a745;">Estimer le tarif</button>
-        <div class="estimation">Distance estimée : -- km | Prix estimé : -- €</div>
-        <button type="submit" style="background-color:#007bff;">Envoyer la demande</button>
-      </form>
-
-      <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
+    <!-- Boutons contact -->
+    <div class="buttons">
+      <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
+      <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
+      <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
+      <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
+      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
     </div>
+
+    <!-- Formulaire -->
+    <form>
+      <input type="text" placeholder="Nom" required />
+      <input type="tel" placeholder="Téléphone" required />
+      <div class="field-container-horizontal">
+        <input type="text" id="depart" placeholder="Adresse de départ" required />
+        <button type="button" class="localiser-side-btn" onclick="localiserDepart()">Me localiser</button>
+      </div>
+      <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required />
+      <select required>
+        <option value="" disabled selected>Nombre de passagers</option>
+        <option value="1">1 passager</option>
+        <option value="2">2 passagers</option>
+        <option value="3">3 passagers</option>
+        <option value="4">4 passagers</option>
+      </select>
+      <input type="datetime-local" required />
+      <textarea placeholder="Informations complémentaires"></textarea>
+      <button type="button" style="background-color:#28a745;" onclick="calculerEstimation()">Estimer le tarif</button>
+      <div class="estimation">Distance estimée : -- km | Prix estimé : -- €</div>
+      <button type="submit" style="background-color:#007bff;">Envoyer la demande</button>
+    </form>
+
+    <!-- Google Traduction -->
+    <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
   </div>
 
+  <!-- Menu bas de page -->
   <div class="bottom-menu">
     <a href="qui-sommes-nous.html">Qui sommes-nous</a>
     <a href="services.html">Services</a>
@@ -185,119 +170,105 @@
     <a href="contact.html">Contact</a>
   </div>
 
+  <!-- Pied de page -->
   <footer>
-    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.
+    © 2025 OuassVTC. Tous droits réservés.
     <br/><br/>
-    Pour toute demande : <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
+    <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
   </footer>
 
+  <!-- Scripts -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script>
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
     }
-    <script>
-  function localiserDepart() {
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(position => {
-        const lat = position.coords.latitude;
-        const lon = position.coords.longitude;
-        fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
-          .then(res => res.json())
-          .then(data => {
-            document.getElementById("depart").value = data.display_name || "";
-            document.getElementById("depart").dispatchEvent(new Event("input")); // relance autocomplete
-          });
-      }, () => {
-        alert("Impossible de récupérer votre position.");
-      });
-    } else {
-      alert("La géolocalisation n'est pas supportée par votre navigateur.");
-    }
-  }
-</script>
-  </script>
-  <script>
-  function autocomplete(inputId) {
-    const input = document.getElementById(inputId);
-    const listId = `${inputId}-list`;
 
-    const dataList = document.createElement("datalist");
-    dataList.id = listId;
-    document.body.appendChild(dataList);
-    input.setAttribute("list", listId);
-
-    input.addEventListener("input", () => {
-      const query = input.value;
-      if (query.length < 3) return;
-
-      fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`)
-        .then(response => response.json())
-        .then(results => {
-          dataList.innerHTML = "";
-          results.forEach(result => {
-            const option = document.createElement("option");
-            option.value = result.display_name;
-            dataList.appendChild(option);
-          });
+    function localiserDepart() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(position => {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          fetch(`https://nominatim.openstreetmap.org/reverse?lat=${lat}&lon=${lon}&format=json`)
+            .then(res => res.json())
+            .then(data => {
+              document.getElementById("depart").value = data.display_name || "";
+              document.getElementById("depart").dispatchEvent(new Event("input"));
+            });
+        }, () => {
+          alert("Impossible de récupérer votre position.");
         });
-    });
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    autocomplete("depart");
-    autocomplete("arrivee");
-  });
-</script>
-
-<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script>
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
-  }
-</script>
-  <script>
-  function calculerEstimation() {
-    const depart = document.getElementById("depart").value;
-    const arrivee = document.getElementById("arrivee").value;
-    if (!depart || !arrivee) {
-      alert("Veuillez remplir les adresses de départ et d'arrivée.");
-      return;
+      } else {
+        alert("La géolocalisation n'est pas supportée par votre navigateur.");
+      }
     }
 
-    fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
-      .then(res => res.json())
-      .then(data1 => {
-        if (!data1.length) throw new Error("Adresse de départ non trouvée");
-        const start = `${data1[0].lon},${data1[0].lat}`;
-        return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
-          .then(res => res.json())
-          .then(data2 => {
-            if (!data2.length) throw new Error("Adresse d'arrivée non trouvée");
-            const end = `${data2[0].lon},${data2[0].lat}`;
-            return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
-              .then(res => res.json())
-              .then(route => {
-                const distKm = route.routes[0].distance / 1000;
-                let prix = 20;
-                if (distKm > 7) prix += (distKm - 7) * 1.6;
-                document.querySelector(".estimation").innerText =
-                  `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-              });
-          });
-      })
-      .catch(() => {
-        document.querySelector(".estimation").innerText = "Estimation indisponible.";
-      });
-  }
+    function autocomplete(inputId) {
+      const input = document.getElementById(inputId);
+      const listId = `${inputId}-list`;
 
-  // Calcul automatique au changement des champs
-  document.addEventListener("DOMContentLoaded", () => {
-    document.getElementById("depart").addEventListener("blur", calculerEstimation);
-    document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
-  });
+      const dataList = document.createElement("datalist");
+      dataList.id = listId;
+      document.body.appendChild(dataList);
+      input.setAttribute("list", listId);
+
+      input.addEventListener("input", () => {
+        const query = input.value;
+        if (query.length < 3) return;
+
+        fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`)
+          .then(response => response.json())
+          .then(results => {
+            dataList.innerHTML = "";
+            results.forEach(result => {
+              const option = document.createElement("option");
+              option.value = result.display_name;
+              dataList.appendChild(option);
+            });
+          });
+      });
+    }
+
+    function calculerEstimation() {
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      if (!depart || !arrivee) {
+        alert("Veuillez remplir les adresses de départ et d'arrivée.");
+        return;
+      }
+
+      fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
+        .then(res => res.json())
+        .then(data1 => {
+          if (!data1.length) throw new Error("Adresse de départ non trouvée");
+          const start = `${data1[0].lon},${data1[0].lat}`;
+          return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
+            .then(res => res.json())
+            .then(data2 => {
+              if (!data2.length) throw new Error("Adresse d'arrivée non trouvée");
+              const end = `${data2[0].lon},${data2[0].lat}`;
+              return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
+                .then(res => res.json())
+                .then(route => {
+                  const distKm = route.routes[0].distance / 1000;
+                  let prix = 20;
+                  if (distKm > 7) prix += (distKm - 7) * 1.6;
+                  document.querySelector(".estimation").innerText =
+                    `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+                });
+            });
+        })
+        .catch(() => {
+          document.querySelector(".estimation").innerText = "Estimation indisponible.";
+        });
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      autocomplete("depart");
+      autocomplete("arrivee");
+      document.getElementById("depart").addEventListener("blur", calculerEstimation);
+      document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
+    });
   </script>
-</body>
-</html>
 </body>
 </html>
