--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="fr">
+<!DOCTYPE html><html lang="fr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OuassVTC - Réservation VTC à Perpignan</title>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -65,24 +65,29 @@
       max-width: 500px;
       margin: 20px auto;
     }
-    input, textarea, select {
+    input, textarea {
       padding: 10px;
       font-size: 16px;
       border-radius: 5px;
       border: 1px solid #ccc;
       width: 100%;
     }
-    .field-container-horizontal {
-      display: flex;
-      gap: 10px;
+    .localiser-btn {
+      position: absolute;
+      right: 15px;
+      top: 6px;
+      background: none;
+      border: none;
+      cursor: pointer;
     }
-    .field-container-horizontal input {
-      flex: 1;
+    .field-container {
+      position: relative;
     }
-    .localiser-side-btn {
+    button {
       padding: 10px;
       background-color: #007bff;
       color: white;
+      font-size: 16px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
@@ -92,16 +97,6 @@
       font-weight: bold;
       margin-top: 10px;
       color: green;
-    }
-    .bottom-menu {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 30px;
-    }
-    .bottom-menu a {
-      color: #007bff;
-      text-decoration: none;
     }
     footer {
       background-color: #000;
@@ -125,65 +120,72 @@
       <h2>OuassVTC – Votre service de transport privé à Perpignan</h2>
       <p>OuassVTC vous propose un service de transport privé à Perpignan et ses environs...</p>
     </div>
-
-    <!-- Boutons contact -->
     <div class="buttons">
       <a href="tel:0644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/phone.png"/> Appeler</a>
       <a href="https://wa.me/33644120784" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/whatsapp.png"/> WhatsApp</a>
       <a href="sms:+33644120784"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/sms.png"/> SMS</a>
       <a href="https://www.facebook.com/people/Ouass-Vtc/pfbid0Ti5DGSqRP1AvcZtZ8HGmCi6YUJLjcgwjJ12GFzv7KpknTsUjkK9TvA12XMo7sFgXl/" target="_blank"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/facebook-new.png"/> Facebook</a>
-      <a href="snapchat://add/ouassvtc"><img src="https://img.icons8.com/ios-filled/50/FFFFFF/snapchat.png"/> Snapchat</a>
     </div>
-
-    <!-- Formulaire -->
-    <form>
-      <input type="text" placeholder="Nom" required />
-      <input type="tel" placeholder="Téléphone" required />
-      <div class="field-container-horizontal">
-        <input type="text" id="depart" placeholder="Adresse de départ" required />
-        <button type="button" class="localiser-side-btn" onclick="localiserDepart()">Me localiser</button>
+    <div class="info">
+      <h2>Formulaire de réservation</h2>
+      <p>Tarif fixe à l'avance – pas de surprise !</p>
+    </div>
+    <form onsubmit="sendEmail(event)">
+      <input type="text" id="nom" name="nom" placeholder="Nom" required />
+      <input type="tel" id="telephone" name="telephone" placeholder="Téléphone" required />
+      <div class="field-container">
+        <input type="text" id="depart" name="depart" placeholder="Adresse de départ" required />
+        <button type="button" class="localiser-btn" onclick="localiserDepart()">
+          <img src="https://img.icons8.com/ios-filled/24/000000/navigation.png" alt="Me localiser" />
+        </button>
       </div>
-      <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required />
-      <select required>
-        <option value="" disabled selected>Nombre de passagers</option>
-        <option value="1">1 passager</option>
-        <option value="2">2 passagers</option>
-        <option value="3">3 passagers</option>
-        <option value="4">4 passagers</option>
-      </select>
-      <input type="datetime-local" required />
-      <textarea placeholder="Informations complémentaires"></textarea>
-      <button type="button" style="background-color:#28a745;" onclick="calculerEstimation()">Estimer le tarif</button>
-      <div class="estimation">Distance estimée : -- km | Prix estimé : -- €</div>
-      <button type="submit" style="background-color:#007bff;">Envoyer la demande</button>
+      <input type="text" id="arrivee" name="arrivee" placeholder="Adresse d'arrivée" required />
+      <input type="number" id="passagers" name="passagers" placeholder="Nombre de passagers" min="1" />
+      <input type="datetime-local" id="dateheure" name="dateheure" required />
+      <textarea id="message" name="message" placeholder="Informations complémentaires"></textarea>
+      <div class="estimation" id="prixEstime"></div>
+      <button type="submit">Envoyer la demande</button>
     </form>
-
-    <!-- Google Traduction -->
     <div id="google_translate_element" style="text-align:center;margin-top:20px;"></div>
   </div>
-
-  <!-- Menu bas de page -->
-  <div class="bottom-menu">
-    <a href="qui-sommes-nous.html">Qui sommes-nous</a>
-    <a href="services.html">Services</a>
-    <a href="faq.html">FAQ</a>
-    <a href="contact.html">Contact</a>
-  </div>
-
-  <!-- Pied de page -->
   <footer>
-    © 2025 OuassVTC. Tous droits réservés.
-    <br/><br/>
-    <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
+    © 2025 OuassVTC. Tous droits réservés. Transport privé sur réservation.<br><br>
+    Pour toute demande : <a href="mailto:contact@ouassvtc.fr" style="color:#0af;">contact@ouassvtc.fr</a>
   </footer>
-
-  <!-- Scripts -->
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <div class="hidden-keywords">Taxi Perpignan, VTC 66, chauffeur privé...</div>
   <script>
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+    emailjs.init("U08QGWWRUenJDOllc");
+    function sendEmail(event) {
+      event.preventDefault();
+      const submitButton = document.querySelector("form button[type='submit']");
+      submitButton.disabled = true;
+      submitButton.innerText = "Envoi en cours...";
+      const nom = document.getElementById("nom").value;
+      const telephone = document.getElementById("telephone").value;
+      const depart = document.getElementById("depart").value;
+      const arrivee = document.getElementById("arrivee").value;
+      const dateheure = document.getElementById("dateheure").value;
+      const passagers = document.getElementById("passagers").value;
+      const message = document.getElementById("message").value;
+      const prixText = document.getElementById("prixEstime").innerText;
+      emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
+        nom, telephone, depart, arrivee, dateheure, passagers, message, prix: prixText
+      }).then(() => {
+        const form = document.querySelector("form");
+        form.style.display = "none";
+        const confirmation = document.createElement("div");
+        confirmation.style.textAlign = "center";
+        confirmation.style.marginTop = "20px";
+        confirmation.style.fontWeight = "bold";
+        confirmation.style.color = "green";
+        confirmation.innerText = "✅ Merci ! Votre demande a bien été envoyée.";
+        document.querySelector(".container").appendChild(confirmation);
+      }).catch(() => {
+        submitButton.disabled = false;
+        submitButton.innerText = "Envoyer la demande";
+        alert("Erreur lors de l'envoi. Veuillez réessayer.");
+      });
     }
-
     function localiserDepart() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(position => {
@@ -193,141 +195,49 @@
             .then(res => res.json())
             .then(data => {
               document.getElementById("depart").value = data.display_name || "";
-              document.getElementById("depart").dispatchEvent(new Event("input"));
+              calculerEstimation();
             });
-        }, () => {
-          alert("Impossible de récupérer votre position.");
         });
       } else {
         alert("La géolocalisation n'est pas supportée par votre navigateur.");
       }
     }
-
-    function autocomplete(inputId) {
-      const input = document.getElementById(inputId);
-      const listId = `${inputId}-list`;
-
-      const dataList = document.createElement("datalist");
-      dataList.id = listId;
-      document.body.appendChild(dataList);
-      input.setAttribute("list", listId);
-
-      input.addEventListener("input", () => {
-        const query = input.value;
-        if (query.length < 3) return;
-
-        fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`)
-          .then(response => response.json())
-          .then(results => {
-            dataList.innerHTML = "";
-            results.forEach(result => {
-              const option = document.createElement("option");
-              option.value = result.display_name;
-              dataList.appendChild(option);
-            });
-          });
-      });
-    }
-
     function calculerEstimation() {
       const depart = document.getElementById("depart").value;
       const arrivee = document.getElementById("arrivee").value;
-      if (!depart || !arrivee) {
-        alert("Veuillez remplir les adresses de départ et d'arrivée.");
-        return;
+      if (depart && arrivee) {
+        fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
+          .then(res => res.json())
+          .then(data1 => {
+            if (!data1.length) throw "Adresse de départ non trouvée";
+            const start = `${data1[0].lon},${data1[0].lat}`;
+            return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
+              .then(res => res.json())
+              .then(data2 => {
+                if (!data2.length) throw "Adresse d'arrivée non trouvée";
+                const end = `${data2[0].lon},${data2[0].lat}`;
+                return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
+                  .then(res => res.json())
+                  .then(route => {
+                    const distKm = route.routes[0].distance / 1000;
+                    let prix = 20;
+                    if (distKm > 7) prix += (distKm - 7) * 1.6;
+                    document.getElementById("prixEstime").innerText =
+                      `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
+                  });
+              });
+          })
+          .catch(() => {
+            document.getElementById("prixEstime").innerText = "Estimation indisponible.";
+          });
       }
-
-      fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(depart)}&format=json&limit=1`)
-        .then(res => res.json())
-        .then(data1 => {
-          if (!data1.length) throw new Error("Adresse de départ non trouvée");
-          const start = `${data1[0].lon},${data1[0].lat}`;
-          return fetch(`https://nominatim.openstreetmap.org/search?q=${encodeURIComponent(arrivee)}&format=json&limit=1`)
-            .then(res => res.json())
-            .then(data2 => {
-              if (!data2.length) throw new Error("Adresse d'arrivée non trouvée");
-              const end = `${data2[0].lon},${data2[0].lat}`;
-              return fetch(`https://router.project-osrm.org/route/v1/driving/${start};${end}?overview=false`)
-                .then(res => res.json())
-                .then(route => {
-                  const distKm = route.routes[0].distance / 1000;
-                  let prix = 20;
-                  if (distKm > 7) prix += (distKm - 7) * 1.6;
-                  document.querySelector(".estimation").innerText =
-                    `Distance estimée : ${distKm.toFixed(1)} km | Prix estimé : ${prix.toFixed(2)} €`;
-                });
-            });
-        })
-        .catch(() => {
-          document.querySelector(".estimation").innerText = "Estimation indisponible.";
-        });
     }
-
-    document.addEventListener("DOMContentLoaded", () => {
-      autocomplete("depart");
-      autocomplete("arrivee");
-      document.getElementById("depart").addEventListener("blur", calculerEstimation);
-      document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
-    });
+    document.getElementById("depart").addEventListener("blur", calculerEstimation);
+    document.getElementById("arrivee").addEventListener("blur", calculerEstimation);
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'fr'}, 'google_translate_element');
+    }
   </script>
-  <script>
-  emailjs.init("U08QGWWRUenJDOllc");
-
-  function sendEmail(event) {
-    event.preventDefault();
-    const submitButton = document.querySelector("form button[type='submit']");
-    submitButton.disabled = true;
-    submitButton.innerText = "Envoi en cours...";
-
-    const nom = document.getElementById("nom").value;
-    const telephone = document.getElementById("telephone").value;
-    const depart = document.getElementById("depart").value;
-    const arrivee = document.getElementById("arrivee").value;
-    const dateheure = document.getElementById("dateheure").value;
-    const passagers = document.getElementById("passagers").value;
-    const message = document.getElementById("message").value;
-    const prixText = document.getElementById("prixEstime")?.innerText || "";
-
-    emailjs.send("service_kdvgh9f", "template_5xt5vlv", {
-      nom, telephone, depart, arrivee, dateheure, passagers, message, prix: prixText
-    }).then(() => {
-      const form = document.querySelector("form");
-      form.style.display = "none";
-
-      const confirmation = document.createElement("div");
-      confirmation.style.textAlign = "center";
-      confirmation.style.marginTop = "20px";
-      confirmation.style.fontWeight = "bold";
-      confirmation.style.color = "green";
-      confirmation.innerText = "✅ Merci ! Votre demande a bien été envoyée. Nous vous contacterons rapidement.";
-
-      const resetBtn = document.createElement("button");
-      resetBtn.innerText = "Faire une nouvelle demande";
-      resetBtn.style.marginTop = "20px";
-      resetBtn.style.padding = "10px 20px";
-      resetBtn.style.border = "none";
-      resetBtn.style.borderRadius = "5px";
-      resetBtn.style.backgroundColor = "#28a745";
-      resetBtn.style.color = "white";
-      resetBtn.style.cursor = "pointer";
-      resetBtn.onclick = () => {
-        form.reset();
-        document.getElementById("prixEstime").innerText = "";
-        form.style.display = "flex";
-        confirmation.remove();
-        resetBtn.remove();
-        submitButton.disabled = false;
-        submitButton.innerText = "Envoyer la demande";
-      };
-
-      document.querySelector(".container").appendChild(confirmation);
-      document.querySelector(".container").appendChild(resetBtn);
-    }).catch(() => {
-      submitButton.disabled = false;
-      submitButton.innerText = "Envoyer la demande";
-      alert("Erreur lors de l'envoi. Veuillez réessayer.");
-    });
-  }
-  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
