--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
   </style>
 </head>
 <body>
+  <nav style="background:#000; padding:10px 0; text-align:center;">
+  <a href="index.html" style="color:white; margin: 0 15px;">Accueil</a>
+  <a href="services.html" style="color:white; margin: 0 15px;">Services</a>
+  <a href="faq.html" style="color:white; margin: 0 15px;">FAQ</a>
+  <a href="qui-sommes-nous.html" style="color:white; margin: 0 15px;">Qui sommes-nous</a>
+  <a href="contact.html" style="color:white; margin: 0 15px;">Contact</a>
+</nav>
   <header>
     <img src="ouassvtc.png" alt="Logo OuassVTC" />
   </header>
