--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <input type="tel" id="telephone" placeholder="Téléphone" required>
     <input type="text" id="depart" placeholder="Adresse de départ" required>
     <input type="text" id="arrivee" placeholder="Adresse d'arrivée" required>
-    <input type="datetime-local" id="dateheure" required>
+    <input type="datetime-local" id="dateheure" name="dateheure" required placeholder="Date de la réservation" />
     <select id="passagers">
       <option value="">Nombre de passagers</option>
       <option value="1">1</option>
