--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </header>
   <div class="container">
     <div class="hero-text">
-      <h2>Votre VTC privé à Perpignan</h2>
+      <h2>Votre chauffeur VTC privé à Perpignan</h2>
       <p>Un service fiable, sécurisé et confortable, accessible en quelques clics. Réservez votre trajet en toute transparence avec estimation instantanée.</p>
     </div><div class="buttons">
   <a href="tel:0644120784">📞 Appeler</a>
